<resources>
    <string name="app_name">My Summary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collegeName">اسم الكلية</string>
    <string name="arabic_tv">عربي 101</string>
    <string name="Arabic99">عربي 99</string>
    <string name="Askaria">عسكرية</string>
    <string name="calculas1">calculus1</string>
    <string name="english99">English99</string>
    <string name="english101">English101</string>
    <string name="namePart">اسم القسم</string>
    <string name="computer99">حاسوب99</string>
    <string name="college">  الكليات</string>
    <string name="tv_part"> الاقسام</string>
    <string name="matirial">         المواد    </string>
    <string name="treePlan">الخطط الشجرية</string>
    <string name="chapters">Chapters</string>
    <string name="share7">شرح</string>
    <string name="test">test</string>
    <string name="appName">ملخصاتي HU</string>
    <string name="mawad5hteary">مواد اختياري</string>
    <string name="send_problem">الابلاغ عن مشكلة</string>
    <string name="email">mysummary.je.mo@gmail.com</string>
    <string name="parts">الأقسام</string>
    <string name="add_mawad">اضافة مادة</string>
    <string name="connect_with_us">تواصل معنا</string>
    <string name="support_us"> شاهد اعلان AD</string>
    <string name="choises">المادة</string>


</resources>