<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.mulakasat.mulaksat">
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="@dimen/width_et_search"
            android:layout_height="@dimen/heigth_et_search"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginTop_et_search"
            android:layout_marginBottom="@dimen/margin_bottom_et"
            android:background="@drawable/searchshape"
            android:elevation="@dimen/shadow"
            android:hint="@string/collegeName"
            android:drawableLeft="@drawable/ic_search"
            android:padding="@dimen/pading_et_search"
            android:paddingLeft="@dimen/marginLeft_ic_search" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/hint_matirial"
                android:id="@+id/tv_Arabic"
                android:layout_width="@dimen/width_tv_hint"
                android:layout_height="@dimen/heigth_tv_hint"
                android:elevation="@dimen/shadow"
                android:gravity="center"
                android:padding="@dimen/tv_hint"
                android:text="@string/Arabic99"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/nill"
                android:layout_marginLeft="@dimen/marginStartHintFirsrt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_Arabic101"
                android:layout_width="@dimen/width_tv_hint"
                android:layout_height="@dimen/heigth_tv_hint"
                android:layout_marginLeft="@dimen/marginStarttvHint"
                android:background="@drawable/hint_matirial"
                android:elevation="@dimen/shadow"
                android:gravity="center"
                android:padding="@dimen/tv_hint"
                android:text="@string/arabic_tv"
                app:layout_constraintStart_toEndOf="@id/tv_Arabic"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_3askaria"
                android:layout_width="@dimen/width_tv_hint"
                android:layout_height="@dimen/heigth_tv_hint"
                android:layout_marginLeft="@dimen/marginStarttvHint"
                android:background="@drawable/hint_matirial"
                android:elevation="@dimen/shadow"
                android:gravity="center"
                android:padding="@dimen/tv_hint"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/Askaria"
                app:layout_constraintStart_toEndOf="@id/tv_Arabic101"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_english99"
                android:layout_width="@dimen/width_tv_hint"
                android:layout_height="@dimen/heigth_tv_hint"
                android:layout_marginLeft="@dimen/marginStarttvHint"
                android:background="@drawable/hint_matirial"
                android:elevation="@dimen/shadow"
                android:gravity="center"
                android:padding="@dimen/tv_hint"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/english99"
                app:layout_constraintStart_toEndOf="@id/tv_3askaria"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_computer"
                android:layout_width="@dimen/width_tv_hint"
                android:layout_height="@dimen/heigth_tv_hint"
                android:layout_marginStart="@dimen/nill"
                android:layout_marginTop="6dp"
                android:background="@drawable/hint_matirial"
                android:elevation="@dimen/shadow"
                android:gravity="center"
                android:layout_marginLeft="33dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_Arabic"

                android:text="@string/computer99" />

            <TextView
                android:id="@+id/tv_calculas"
                android:layout_width="@dimen/width_tv_hint"
                android:layout_height="@dimen/heigth_tv_hint"
                android:layout_marginStart="@dimen/marginStarttvHint"
                android:layout_marginTop="6dp"
                android:background="@drawable/hint_matirial"
                android:gravity="center"
                android:text="@string/calculas1"
                app:layout_constraintStart_toEndOf="@id/tv_computer"
                app:layout_constraintTop_toBottomOf="@id/tv_Arabic"

                android:layout_marginLeft="@dimen/marginStarttvHint" />

            <TextView
                android:id="@+id/tv_english101"
                android:layout_width="@dimen/width_tv_hint"
                android:layout_height="@dimen/heigth_tv_hint"
                android:layout_marginStart="@dimen/nill"
                android:layout_marginTop="6dp"
                android:background="@drawable/hint_matirial"
                android:gravity="center"
                android:text="@string/english101"
                app:layout_constraintStart_toEndOf="@id/tv_calculas"
                app:layout_constraintTop_toBottomOf="@id/tv_Arabic"

                android:layout_marginLeft="@dimen/marginStarttvHint" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margintop_rv"
            android:layout_marginStart="@dimen/nill"
            android:layout_marginLeft="@dimen/marginEnd_tv_paind"
            android:textColor="@color/gray"
            android:textSize="@dimen/tv_pain"
            android:textStyle="bold"

            android:text="@string/college" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_college"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginTop_rv" />
    </LinearLayout>


</FrameLayout>